welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:6: error: type mismatch;
 found   : Int(1)
 required: Boolean
			return 1;
                               ^SnakeBuggle:9: error: type mismatch;
 found   : Int(2)
 required: Boolean
			return 2;
                               ^SnakeBuggle:11: error: type mismatch;
 found   : Int(0)
 required: Boolean
		else return 0;
                            ^